# PL-FinalProject

./: .calc-hist  Calc.lhs  CalcREPL.hs  LICENSE  README.md  SetREPL.hs  calc.cabal  set.cabal  stack.yaml
.stack-work/: stack.sqlite3
