name:                calc
version:             1.0
license:             BSD3
license-file:        LICENSE
author:              Noah Chaffin
maintainer:          ChaffinNC@hendrix.edu
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable calc
  main-is:             CalcREPL.hs
  other-modules:       Calc, Parsing2
  other-extensions:    GADTs
  build-depends:       base >=4.10 && <4.22, haskeline >=0.7 && <0.9, parsec, containers
  default-language:    Haskell2010
